--- a/assets/src/sass/blocks/video-popup-section.scss
+++ b/assets/src/sass/blocks/video-popup-section.scss
@@ -28,30 +28,49 @@
           line-height: 1.26;
           margin-bottom: 2.7rem;
         }
-        .il_section_text{
-          .il_sheba_best_badges{
+        .il_section_text {
+          .il_sheba_best_badges {
             display: flex;
             justify-content: space-between;
 
-            @include limbo-only{
-              justify-content: center;
-            }
-
-            @include tab-max{
+            @include tab-max {
+              flex-wrap: wrap;
               padding-bottom: 30px;
             }
 
-            img{
-              @include tab-max{
-                width: calc(20% - 16px);
-              }
+            @include limbo-only {
+              justify-content: center;
             }
 
-            img:not(:last-of-type){
-              @include limbo-only{
-                margin-right: 20px;
+            @include limbo-min {
+              align-items: flex-end;
+            }
+
+            img {
+              @include tab-max {
+                width: calc(20% - 16px);
               }
-              
+
+              @include tab-max {
+                width: fit-content;
+                height: auto;
+                &:nth-of-type(1), &:nth-of-type(2), &:nth-of-type(3) {
+                  margin-bottom: 18px;
+                }
+              }
+
+              @include limbo-min {
+                &:nth-of-type(3), &:nth-of-type(4), &:nth-of-type(5), &:nth-of-type(6) {
+                  width: auto;
+                  height: 115px;
+                }
+              }
+
+              &:not(:last-of-type){
+                @include limbo-only {
+                  margin-right: 20px;
+                }
+              }
             }
           }
 
